# journal-demo

./: Cargo.toml  migrations.sql
src/: main.rs
templates/: base.html  post.html  post_form.html  post_index.html  styles.css
